Handle null response handling in `listFormatterAttributes` for HTTP and MQ clients